# numlib

./: .clang-format  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  README.md  ThirdPartyNotices.txt  appveyor.yml  cpp.hint
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
bench/: CMakeLists.txt  bench_axpy.cpp  bench_dot.cpp  bench_eigs.cpp  bench_mm_mul.cpp  bench_mv_mul.cpp  bench_norm.cpp  bench_transpose.cpp
cmake/: FindMKL.cmake  FindOpenBLAS.cmake
doc/: MANUAL.md
docs/: Benchmarks.md  Getting_started.md  Tutorial.md
examples/: CMakeLists.txt  aliasing.cpp  arithmetic.cpp  band_matrix.cpp  basic_matrix_uses.cpp  const_correctness.cpp  constants.cpp  convolution.cpp  derivation.cpp  eigensolvers.cpp  fourier_transform.cpp  integration.cpp  linear_algebra.cpp  linear_least_squares.cpp  lsoda_stiff.cpp  lsode_lorenz.cpp  lsode_stiff.cpp  matrix_decomposition.cpp  matrix_inversion.cpp  matrix_properties.cpp  packed_matrix.cpp  solve_ivp.cpp  solve_linear_equations.cpp  sparse_eigensolver.cpp  sparse_linsolve.cpp  special_functions.cpp  statistics.cpp  sub_matrix_views.cpp  subscripting_and_slicing.cpp
include/matrix/: matrix.h
include/matrix/matrix_impl/: matrix.h  matrix_base.h  matrix_slice.h  support.h  traits.h
include/numlib/: array.h  band_matrix.h  constants.h  math.h  matrix.h  packed_matrix.h  traits.h
include/numlib/array_impl/: array0.h  array1.h  array2.h  array3.h  array4.h  array_io.h  array_opr.h  array_ref.h  array_ref1.h  array_ref2.h  array_ref3.h  functors.h  slice_iter.h
include/numlib/band_impl/: band_matrix.h  operations.h  type_alias.h
include/numlib/band_matrix/: band_matrix.h  operations.h
include/numlib/math_impl/: calculus.h  core.h  cquadpack.h  dlsode.h  euler.h  faddeeva.h  geometry.h  grid.h  linalg.h  lsoda.h  lsode.h  odeint.h  odepack.h  quadpack.h  quaternion.h  signal.h  special_functions.h  statistics.h
include/numlib/matrix_impl/: iterator.h  matrix.h  matrix_base.h  matrix_fwd.h  matrix_opr.h  matrix_ref.h  matrix_slice.h  operations.h  slice.h  support.h  traits.h  type_alias.h
include/numlib/packed_impl/: operations.h  packed_matrix.h  type_alias.h  uplo_scheme.h
include/numlib/sparse_impl/: operations.h  sparse_matrix.h  sparse_vector.h  type_alias.h
include/numlib/traits/: traits.h
lib/: CMakeLists.txt  calculus.cpp  cquadpack_dqagi.c  cquadpack_dqags.c  cquadpack_dqext.c  cquadpack_dqk15i.c  cquadpack_dqk21.c  cquadpack_dqsort.c  euler.cpp  faddeeva.cpp  geometry.cpp  grid.cpp  linalg.cpp  lsoda.c  lsoda.cpp  quaternion.cpp  signal.cpp  statistics.cpp
liblsode/: CMakeLists.txt
odepack/: CMakeLists.txt  rkf45.f
quadpack/: CMakeLists.txt
tests/: CMakeLists.txt  test.cpp  test_band_matrix.cpp  test_constants.cpp  test_grid.cpp  test_math_calculus.cpp  test_math_core.cpp  test_math_euler.cpp  test_math_faddeeva.cpp  test_math_geometry.cpp  test_math_grid.cpp  test_math_linalg.cpp  test_math_odeint.cpp  test_math_quaternion.cpp  test_math_signal.cpp  test_math_special_functions.cpp  test_math_statistics.cpp  test_matrix0.cpp  test_matrix1.cpp  test_matrix2.cpp  test_matrix3.cpp  test_matrix4.cpp  test_packed_matrix.cpp  test_sparse_matrix.cpp  test_sparse_vector.cpp
